<resources>
    <string name="app_name">QuickList</string>
    <string name="hello_world">Hello World</string>
    <string name="settings">Settings</string>
    <string name="add_to_list">Add to list</string>
    <string name="delete">Delete</string>
    <string name="save_tasks">Save tasks</string>
    <string name="load_lists">Load Lists</string>
    <string name="saved_list">Saved List</string>
    <string name="reset_checkboxes">Reset Checkboxes</string>
    <string name="saved_lists">Saved Lists</string>
    <string name="quick_list">QuickList</string>
    <string name="clear_list">Clear List</string>
    <string name="delete_list">Delete List</string>
    <string name="edit_list_name">Edit List Name</string>
    <string name="sort_by_task">Sort By Task</string>
    <string name="sort_by_check_box">Sort By Checkbox</string>
    <string name="banner_home_footer">ca-app-pub-4108128512113208/8858867778</string>
</resources>
